--- a/app/src/main/res/layout-land/table_design.xml
+++ b/app/src/main/res/layout-land/table_design.xml
@@ -75,7 +75,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
             android:layout_marginStart="21dp"
-            android:id="@+id/imageViewDealer01"
+            android:id="@+id/dealer1_imageView"
             android:contentDescription="@string/face_down_playing_card"
             android:adjustViewBounds="true"
             android:visibility="invisible" />
@@ -84,11 +84,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ace"
-            android:id="@+id/imageViewDealer02"
+            android:id="@+id/dealer2_imageView"
             android:adjustViewBounds="true"
             android:layout_marginStart="15dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/imageViewDealer01"
+            android:layout_alignStart="@+id/dealer1_imageView"
             android:contentDescription="@string/ace_of_spades"
             android:visibility="invisible"/>
 
@@ -96,11 +96,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ace"
-            android:id="@+id/imageViewDealer03"
+            android:id="@+id/delaer3_imageView"
             android:adjustViewBounds="true"
             android:layout_marginStart="15dp"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/imageViewDealer02"
+            android:layout_alignStart="@+id/dealer2_imageView"
             android:contentDescription="@string/ace_of_spades"
             android:visibility="invisible" />
 
@@ -108,11 +108,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ace"
-            android:id="@+id/imageViewDealer04"
+            android:id="@+id/dealer4_imageView"
             android:adjustViewBounds="true"
             android:layout_marginStart="15dp"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/imageViewDealer03"
+            android:layout_alignStart="@+id/delaer3_imageView"
             android:contentDescription="@string/ace_of_spades"
             android:visibility="invisible" />
 
@@ -120,11 +120,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ace"
-            android:id="@+id/imageViewDealer05"
+            android:id="@+id/dealer5_imageView"
             android:adjustViewBounds="true"
             android:layout_marginStart="15dp"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/imageViewDealer04"
+            android:layout_alignStart="@+id/dealer4_imageView"
             android:contentDescription="@string/ace_of_spades"
             android:visibility="invisible" />
 
@@ -132,11 +132,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ace"
-            android:id="@+id/imageViewDealer06"
+            android:id="@+id/dealer6_imageView"
             android:layout_marginStart="15dp"
             android:adjustViewBounds="true"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/imageViewDealer05"
+            android:layout_alignStart="@+id/dealer5_imageView"
             android:contentDescription="@string/ace_of_spades"
             android:visibility="invisible" />
 
@@ -144,10 +144,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ace"
-            android:id="@+id/imageViewDealer07"
+            android:id="@+id/dealer7_imageView"
             android:adjustViewBounds="true"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/imageViewDealer06"
+            android:layout_alignStart="@+id/dealer6_imageView"
             android:layout_marginStart="15dp"
             android:contentDescription="@string/ace_of_spades"
             android:visibility="invisible" />
@@ -156,22 +156,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ace"
-            android:id="@+id/imageViewDealer08"
+            android:id="@+id/dealer8_imageView"
             android:adjustViewBounds="true"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/imageViewDealer07"
-            android:contentDescription="@string/ace_of_spades"
-            android:layout_marginStart="15dp"
-            android:visibility="invisible" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ace"
-            android:id="@+id/imageViewDealer09"
-            android:adjustViewBounds="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/imageViewDealer08"
+            android:layout_alignStart="@+id/dealer7_imageView"
             android:contentDescription="@string/ace_of_spades"
             android:layout_marginStart="15dp"
             android:visibility="invisible" />
@@ -180,10 +168,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ace"
-            android:id="@+id/imageViewDealer10"
+            android:id="@+id/dealer9_imageView"
             android:adjustViewBounds="true"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/imageViewDealer09"
+            android:layout_alignStart="@+id/dealer8_imageView"
+            android:contentDescription="@string/ace_of_spades"
+            android:layout_marginStart="15dp"
+            android:visibility="invisible" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ace"
+            android:id="@+id/dealer10_imageView"
+            android:adjustViewBounds="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/dealer9_imageView"
             android:contentDescription="@string/ace_of_spades"
             android:layout_marginStart="15dp"
             android:visibility="invisible" />
@@ -196,7 +196,7 @@
             android:adjustViewBounds="true"
             android:layout_marginStart="15dp"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/imageViewDealer10"
+            android:layout_alignStart="@+id/dealer10_imageView"
             android:contentDescription="@string/ace_of_spades"
             android:visibility="invisible" />
 
